backport: re PR c++/12696 (memory eating infinite loop in diagnostics)

Backport from mainline:
	2003-12-16  Mark Mitchell  <mark@codesourcery.com>

        PR c++/12696
        * decl.c (reshape_init): Recover quickly from errors.

From-SVN: r75032